--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "gatsby-transformer-sharp": "^5.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "^0.34.3"
+    "react-ga4": "^2.1.0",
+    "sharp": "0.34.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
