--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
     "autoprefixer": "^10.4.21",
+    "gatsby-cli": "^5.14.0",
     "gatsby-plugin-postcss": "^6.14.0",
     "gatsby-plugin-tailwindcss": "^1.0.3",
     "postcss": "^8.5.6",
