--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@img/sharp-darwin-arm64": "^0.34.3",
     "gatsby": "^5.14.1",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.14.0",
@@ -19,10 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
-    "sharp": "0.32.6"
-  },
-  "overrides": {
-    "sharp": "0.32.6"
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
@@ -39,6 +35,7 @@
   ],
   "license": "0BSD",
   "scripts": {
+    "preinstall": "if [ \"$CI\" = \"true\" ]; then export npm_config_platform=linux npm_config_arch=x64; fi",
     "build": "gatsby build",
     "dev": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
