--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "npm": {
+    "supportedArchitectures": {
+      "os": ["darwin", "current"],
+      "cpu": ["arm64", "x64"]
+    }
+  },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "gatsby": "^5.14.1",
@@ -15,6 +21,7 @@
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
     "gatsby-transformer-sqip": "^5.14.0",
+    "postcss-loader": "^8.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
