--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "npm": {
     "supportedArchitectures": {
-      "os": ["darwin", "current"],
-      "cpu": ["arm64", "x64"]
+      "os": [
+        "darwin",
+        "current"
+      ],
+      "cpu": [
+        "arm64",
+        "x64"
+      ]
     }
   },
   "dependencies": {
@@ -16,6 +22,7 @@
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.14.0",
     "gatsby-plugin-sharp": "^5.14.0",
+    "gatsby-plugin-sitemap": "^6.14.0",
     "gatsby-remark-images-contentful": "^6.14.0",
     "gatsby-source-contentful": "^8.15.0",
     "gatsby-source-filesystem": "^5.14.0",
